--- a/TestModule/TestModule.vcxproj.filters
+++ b/TestModule/TestModule.vcxproj.filters
@@ -36,6 +36,9 @@
     <CustomBuild Include="..\Core\Test\TestORB\idl\Test_I3_factory.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
+    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_V1.idl">
+      <Filter>IDL</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Core\Test\TestORB\module\I1_factory_dynamic.cpp">
