--- a/TestModule/TestModule.vcxproj.filters
+++ b/TestModule/TestModule.vcxproj.filters
@@ -39,6 +39,9 @@
     <CustomBuild Include="..\Core\Test\TestORB\idl\Test_V1.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
+    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_A1.idl">
+      <Filter>IDL</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Core\Test\TestORB\module\I1_factory_dynamic.cpp">
@@ -102,6 +105,12 @@
       <Filter>Generated</Filter>
     </ClCompile>
     <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_V1_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_A1.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Core\Test\TestORB\module\IDL\Test_A1_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
   </ItemGroup>
@@ -179,6 +188,12 @@
       <Filter>Generated</Filter>
     </ClInclude>
     <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_V1_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_A1.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Core\Test\TestORB\module\IDL\Test_A1_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
   </ItemGroup>
