--- a/TestProcess/TestProcess.vcxproj.filters
+++ b/TestProcess/TestProcess.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="..\Core\Test\TestORB\process\IDL\Test_A1.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
+    <ClCompile Include="..\Core\Test\TestORB\process\IDL\Test_V1.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Core\Test\TestORB\include\TestORB.h">
@@ -98,6 +101,9 @@
     <ClInclude Include="..\Core\Test\TestORB\process\IDL\Test_A1.h">
       <Filter>Generated</Filter>
     </ClInclude>
+    <ClInclude Include="..\Core\Test\TestORB\process\IDL\Test_V1.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\Core\Test\TestORB\idl\Test_I1.idl">
@@ -116,6 +122,9 @@
       <Filter>IDL</Filter>
     </CustomBuild>
     <CustomBuild Include="..\Core\Test\TestORB\idl\Test_A1.idl">
+      <Filter>IDL</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\Core\Test\TestORB\idl\Test_V1.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
   </ItemGroup>
